// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SwiftEmitter > snapshot: card + heading + button 1`] = `
"// AppStyles.swift — Generated by dot codegen
// Do not edit manually. Regenerate with: dot-codegen --target swift

import SwiftUI

// MARK: - Color Hex Extension

extension Color {
    init(hex: String) {
        let hex = hex.trimmingCharacters(in: CharacterSet.alphanumerics.inverted)
        var int: UInt64 = 0
        Scanner(string: hex).scanHexInt64(&int)
        let a, r, g, b: UInt64
        switch hex.count {
        case 3:
            (a, r, g, b) = (255, (int >> 8) * 17, (int >> 4 & 0xF) * 17, (int & 0xF) * 17)
        case 6:
            (a, r, g, b) = (255, int >> 16, int >> 8 & 0xFF, int & 0xFF)
        case 8:
            (a, r, g, b) = (int >> 24, int >> 16 & 0xFF, int >> 8 & 0xFF, int & 0xFF)
        default:
            (a, r, g, b) = (255, 0, 0, 0)
        }
        self.init(
            .sRGB,
            red: Double(r) / 255,
            green: Double(g) / 255,
            blue: Double(b) / 255,
            opacity: Double(a) / 255
        )
    }
}

// MARK: - Color Palette

extension Color {
    static let dotffffff = Color(hex: "#ffffff")
    static let dot000000 = Color(hex: "#000000")
    static let dot121418 = Color(hex: "#121418")
    static let dot2b6cd6 = Color(hex: "#2b6cd6")
}

// MARK: - Style Modifiers

extension View {
    /// dot: "p-4 bg-white rounded-lg shadow-md"
    func dotCardBase() -> some View {
        self
            .padding(16)
            .background(Color(hex: "#ffffff"))
            .clipShape(RoundedRectangle(cornerRadius: 8))
            .shadow(color: Color(hex: "#000000").opacity(0.1), radius: 3, x: 0, y: 4)
            .shadow(color: Color(hex: "#000000").opacity(0.1), radius: 2, x: 0, y: 2)
    }

    /// dot: "text-2xl font-bold text-gray-900"
    func dotHeading() -> some View {
        self
            .foregroundColor(Color(hex: "#121418"))
            .font(.system(size: 24, weight: .bold))
    }

    /// dot: "px-6 py-3 bg-primary-500 text-white rounded-full font-semibold"
    func dotPrimaryButton() -> some View {
        self
            .padding(.horizontal, 24)
            .padding(.vertical, 12)
            .background(Color(hex: "#2b6cd6"))
            .foregroundColor(Color(hex: "#ffffff"))
            .font(.system(weight: .semibold))
            .clipShape(RoundedRectangle(cornerRadius: 9999))
    }
}
"
`;

exports[`SwiftEmitter > snapshot: layout utilities 1`] = `
"// LayoutStyles.swift — Generated by dot codegen
// Do not edit manually. Regenerate with: dot-codegen --target swift

import SwiftUI

// MARK: - Color Hex Extension

extension Color {
    init(hex: String) {
        let hex = hex.trimmingCharacters(in: CharacterSet.alphanumerics.inverted)
        var int: UInt64 = 0
        Scanner(string: hex).scanHexInt64(&int)
        let a, r, g, b: UInt64
        switch hex.count {
        case 3:
            (a, r, g, b) = (255, (int >> 8) * 17, (int >> 4 & 0xF) * 17, (int & 0xF) * 17)
        case 6:
            (a, r, g, b) = (255, int >> 16, int >> 8 & 0xFF, int & 0xFF)
        case 8:
            (a, r, g, b) = (int >> 24, int >> 16 & 0xFF, int >> 8 & 0xFF, int & 0xFF)
        default:
            (a, r, g, b) = (255, 0, 0, 0)
        }
        self.init(
            .sRGB,
            red: Double(r) / 255,
            green: Double(g) / 255,
            blue: Double(b) / 255,
            opacity: Double(a) / 255
        )
    }
}

// MARK: - Style Modifiers

extension View {
    /// dot: "w-full"
    func dotFullWidth() -> some View {
        self
            .frame(maxWidth: .infinity)
    }

    /// dot: "w-64 h-32"
    func dotFixedBox() -> some View {
        self
            .frame(width: 256, height: 128)
    }

    /// dot: "text-center"
    func dotCentered() -> some View {
        self
            .multilineTextAlignment(.center)
    }

    /// dot: "rotate-45 scale-110 opacity-80"
    func dotRotatedCard() -> some View {
        self
            .opacity(0.8)
            .rotationEffect(.degrees(45))
            .scaleEffect(1.1)
    }
}
"
`;
